// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WebVitals render matches snapshot 1`] = `
.c1 {
  position: absolute;
  display: none;
  bottom: 50px;
  max-width: 300px;
  color: rgb(31 41 55 / 1);
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.1);
  font-size: 0.875rem;
  line-height: 1.25rem;
  padding-left: 0.75rem;
  padding-right: 0.75rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  background-color: #fff;
  border: solid #ccc 1px;
  border-radius: 0.25rem;
  z-index: 10;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0 > div {
  margin-right: 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  line-height: normal;
}

.c2 {
  display: inline-block;
  color: white;
  border-radius: 10px;
  padding: 7px;
  margin: 0 3px;
  background-color: #a86323;
}

.c3 {
  display: inline-block;
  color: white;
  border-radius: 10px;
  padding: 7px;
  margin: 0 3px;
  background-color: #972020;
}

.c4 {
  display: none;
  color: white;
  border-radius: 10px;
  padding: 7px;
  margin: 0 3px;
  background-color: #aaaaaa;
}

.c5 {
  display: inline-block;
  color: white;
  border-radius: 10px;
  padding: 7px;
  margin: 0 3px;
  background-color: #2daf2d;
}

<div>
  <div
    class="c0"
  >
    <div
      aria-label="TTFB"
      title="Time to first byte"
    >
      <div
        aria-hidden="true"
        class="c1"
        role="tooltip"
      >
        <b>
          Time to first byte.
        </b>
        <br />
        <small>
          <i>
            The time between the request for a resource and when the first byte of a response begins to arrive
          </i>
        </small>
        <br />
        Needs improvement
        . 
        1
        ms
        <br />
        fetch: 
        <br />
        domain_lookup: 
        <br />
        connect: 
        <br />
        request:
        <br />
        response: 
        <br />
        DOM Content loaded: 
        <br />
        DOM complete:
        <br />
        load start: 
      </div>
      TTFB 
      <div
        class="c2"
      />
    </div>
    <div
      aria-label="FCP"
      title="First Contentful Paint"
    >
      <div
        aria-hidden="true"
        class="c1"
        role="tooltip"
      >
        <b>
          First Contentful Paint
        </b>
        <br />
        <small>
          <i>
            The time from when the page starts loading to when any part of the page's content is rendered on the screen
          </i>
        </small>
        <br />
        Poor
        . 
        0.001
        s
      </div>
      FCP 
      <div
        class="c3"
      />
    </div>
    <div
      aria-label="LCP"
      title="Largest Contentful Paint"
    >
      <div
        aria-hidden="true"
        class="c1"
        role="tooltip"
      >
        <b>
          Largest Contentful Paint.
        </b>
        <br />
        <small>
          <i>
            The render time of the largest image or text block visible within the viewport, relative to when the page first started loading.
          </i>
        </small>
        <br />
        Poor
        . 
        0.001
        s
      </div>
      LCP 
      <div
        class="c3"
      />
    </div>
    <div
      aria-label="FID"
      title="First Input Delay"
    >
      <div
        aria-hidden="true"
        class="c1"
        role="tooltip"
      >
        <b>
          First Input Delay.
        </b>
        <br />
        <small>
          <i>
            The time from when a user first interacts with a page to the time when the browser is actually able to begin processing event handlers in response to that interaction.
          </i>
        </small>
        <br />
        <small>
          * Not reported if the user never interacts with the page
        </small>
        <br />
        unknown
        . 
        1
        ms
      </div>
      FID 
      <div
        class="c4"
      />
    </div>
    <div
      aria-label="CLS"
      title="Cumulative Layout Shift"
    >
      <div
        aria-hidden="true"
        class="c1"
        role="tooltip"
      >
        <b>
          Cumulative Layout Shift.
        </b>
        <br />
        <small>
          <i>
            Measure of the largest burst of layout shift scores for every unexpected layout shift that occurs during the entire lifespan of a page.
          </i>
        </small>
        <br />
        Good
        . 
         timestamp: 
      </div>
      CLS 
      <div
        class="c5"
      />
    </div>
  </div>
</div>
`;

exports[`WebVitals shows tooltip on mouseover 'CLS' 1`] = `
.c0 {
  position: absolute;
  display: inline-block;
  bottom: 50px;
  max-width: 300px;
  color: rgb(31 41 55 / 1);
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.1);
  font-size: 0.875rem;
  line-height: 1.25rem;
  padding-left: 0.75rem;
  padding-right: 0.75rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  background-color: #fff;
  border: solid #ccc 1px;
  border-radius: 0.25rem;
  z-index: 10;
}

<div
  aria-hidden="false"
  class="c0"
  role="tooltip"
>
  <b>
    Cumulative Layout Shift.
  </b>
  <br />
  <small>
    <i>
      Measure of the largest burst of layout shift scores for every unexpected layout shift that occurs during the entire lifespan of a page.
    </i>
  </small>
  <br />
  Good
  . 
   timestamp: 
</div>
`;

exports[`WebVitals shows tooltip on mouseover 'FCP' 1`] = `
.c0 {
  position: absolute;
  display: inline-block;
  bottom: 50px;
  max-width: 300px;
  color: rgb(31 41 55 / 1);
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.1);
  font-size: 0.875rem;
  line-height: 1.25rem;
  padding-left: 0.75rem;
  padding-right: 0.75rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  background-color: #fff;
  border: solid #ccc 1px;
  border-radius: 0.25rem;
  z-index: 10;
}

<div
  aria-hidden="false"
  class="c0"
  role="tooltip"
>
  <b>
    First Contentful Paint
  </b>
  <br />
  <small>
    <i>
      The time from when the page starts loading to when any part of the page's content is rendered on the screen
    </i>
  </small>
  <br />
  Poor
  . 
  0.001
  s
</div>
`;

exports[`WebVitals shows tooltip on mouseover 'FID' 1`] = `
.c0 {
  position: absolute;
  display: inline-block;
  bottom: 50px;
  max-width: 300px;
  color: rgb(31 41 55 / 1);
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.1);
  font-size: 0.875rem;
  line-height: 1.25rem;
  padding-left: 0.75rem;
  padding-right: 0.75rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  background-color: #fff;
  border: solid #ccc 1px;
  border-radius: 0.25rem;
  z-index: 10;
}

<div
  aria-hidden="false"
  class="c0"
  role="tooltip"
>
  <b>
    First Input Delay.
  </b>
  <br />
  <small>
    <i>
      The time from when a user first interacts with a page to the time when the browser is actually able to begin processing event handlers in response to that interaction.
    </i>
  </small>
  <br />
  <small>
    * Not reported if the user never interacts with the page
  </small>
  <br />
  unknown
  . 
  1
  ms
</div>
`;

exports[`WebVitals shows tooltip on mouseover 'LCP' 1`] = `
.c0 {
  position: absolute;
  display: inline-block;
  bottom: 50px;
  max-width: 300px;
  color: rgb(31 41 55 / 1);
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.1);
  font-size: 0.875rem;
  line-height: 1.25rem;
  padding-left: 0.75rem;
  padding-right: 0.75rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  background-color: #fff;
  border: solid #ccc 1px;
  border-radius: 0.25rem;
  z-index: 10;
}

<div
  aria-hidden="false"
  class="c0"
  role="tooltip"
>
  <b>
    Largest Contentful Paint.
  </b>
  <br />
  <small>
    <i>
      The render time of the largest image or text block visible within the viewport, relative to when the page first started loading.
    </i>
  </small>
  <br />
  Poor
  . 
  0.001
  s
</div>
`;

exports[`WebVitals shows tooltip on mouseover 'TTFB' 1`] = `
.c0 {
  position: absolute;
  display: inline-block;
  bottom: 50px;
  max-width: 300px;
  color: rgb(31 41 55 / 1);
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.1);
  font-size: 0.875rem;
  line-height: 1.25rem;
  padding-left: 0.75rem;
  padding-right: 0.75rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  background-color: #fff;
  border: solid #ccc 1px;
  border-radius: 0.25rem;
  z-index: 10;
}

<div
  aria-hidden="false"
  class="c0"
  role="tooltip"
>
  <b>
    Time to first byte.
  </b>
  <br />
  <small>
    <i>
      The time between the request for a resource and when the first byte of a response begins to arrive
    </i>
  </small>
  <br />
  Needs improvement
  . 
  1
  ms
  <br />
  fetch: 
  <br />
  domain_lookup: 
  <br />
  connect: 
  <br />
  request:
  <br />
  response: 
  <br />
  DOM Content loaded: 
  <br />
  DOM complete:
  <br />
  load start: 
</div>
`;
